Fix spacing of sidebar and add styling

--- a/styles.css
+++ b/styles.css
@@ -78,25 +78,21 @@ body {
     
 }
 
-#container div {
-    /* border: solid 1px black; */
-}
-
-
 /* SIDEBAR || */
 #sidebar {
-    grid-row: 1 / 5;
+    grid-row: 1 / 3;
     display: grid;
     grid-template-columns: 1fr;
     background-color: var(--primary-clr);
-    font-size: 20px;
+    font-size: 25px;
     color: var(--main-text-clr);
     justify-items: start;
-    /* align-items: center; */
+    align-content: start;
+    gap: 2.5rem;
 }
 
 #sidebar img {
-    width: 30px;
+    width: 50px;
 }
 
 .sidebar-icons {
@@ -104,24 +100,18 @@ body {
     grid-template-columns: 0.5fr 1fr;
     align-items: center;
     gap: 20px;
-}
-/* #sidebar h2 {
-    position: relative;
-    padding-left: 20px;
+    padding: 5px 20px 5px 30px;
 }
 
-#sidebar li {
-    position: relative;
-    padding-left: 20px;
+.dashboard {
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 15px;
 }
 
-#sidebar img {
-    width: 50px;
-    position: inherit;
-    top: 10px;
-    right: 10px;
-} */
-
+.dashboard img {
+    width: 60px
+}
 
 
 /* HEADER || */
